<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false"
    android:clipToPadding="false">

    <!-- Help content layout -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/help_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Toolbar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.Material3.Dark.ActionBar"
            app:title="@string/help_toolbar_title"
            app:navigationIcon="@drawable/ic_menu"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:id="@+id/help_scroll"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            app:layout_constraintVertical_bias="0.0">

            <!-- Main BLOCK -->
            <LinearLayout
                android:id="@+id/help_block"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounded_block"
                android:orientation="vertical"
                android:padding="16dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_textview_setup_0_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:paddingBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_textview_setup_1_text"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:paddingBottom="8dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginVertical="12dp"
                    android:src="@drawable/img_settings" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#33FFFFFF"
                    android:layout_marginVertical="12dp"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_textview_input_0_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:paddingBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_textview_input_1_text"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:paddingBottom="8dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginVertical="12dp"
                    android:src="@drawable/img_input" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#33FFFFFF"
                    android:layout_marginVertical="12dp"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_textview_update_0_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:paddingBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_textview_update_1_text"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:paddingBottom="8dp" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#33FFFFFF"
                    android:layout_marginVertical="12dp"/>

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_textview_display_0_text"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:paddingBottom="8dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/help_textview_display_1_text"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:paddingBottom="8dp" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginVertical="12dp"
                    android:src="@drawable/img_calendar_0" />

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:layout_marginVertical="12dp"
                    android:src="@drawable/img_calendar_1" />


                <Space
                    android:layout_width="match_parent"
                    android:layout_height="400dp" />

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Drawer menu -->
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/navigation_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/background_color"
        app:menu="@menu/drawer_menu"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:itemBackground="@drawable/nav_item_background" />

</androidx.drawerlayout.widget.DrawerLayout>
